[package]
name = "saturnine_dreams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.bevy]
opt-level = 3

[dependencies]
rand = "0.8.5"
delaunator = "1.0.1"
bevy = {version = "0.9.1", features = ["dynamic"]}
bevy-inspector-egui = "0.17.0"